provide an  interface to remove popupView when viewcontroller pop

--- a/MMComboBoxDemo/MMComboBoxDemo/Base.lproj/Main.storyboard
+++ b/MMComboBoxDemo/MMComboBoxDemo/Base.lproj/Main.storyboard
@@ -27,7 +27,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1056.8" y="122.78860569715144"/>
+            <point key="canvasLocation" x="1353" y="-147"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="YR2-Dv-rk4">
